--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
  jobs:
    build:
      docker:
-       - image: circleci/ruby:2.4.1
+       - image: ubuntu-lastest
      steps:
        - checkout
-       - run: echo "A first hello"
+       - run: echo "Hello bae =))"
