--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
  jobs:
    build:
      docker:
-       - image: circleci/ruby:2.4.2-jessie-node
+       - image: circleci/android
      steps:
        - checkout
        - run:
