--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -8,19 +8,4 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Run a multi-line script
-      run: |
-        wget https://jenkins.pmmp.io/job/PHP-7.3-Aggregate/lastSuccessfulBuild/artifact/PHP-7.3-Linux-x86_64.tar.gz
-        tar -xzf PHP-7.3-Linux-x86_64.tar.gz
-        mkdir build
-        wget https://getcomposer.org/download/1.9.1/composer.phar
-        bin/php7/bin/php composer.phar install
-        composer config -g github-oauth.github.com aa63c1d3462bcc313e438a6a70202e80e102807b
-        wget https://raw.githubusercontent.com/pmmp/DevTools/master/src/DevTools/ConsoleScript.php
-        bin/php7/bin/php -dphar.readonly=0 ConsoleScript.php --make src,vendor --relative "" --entry "src/pocketmine/PocketMine.php" --out build/UNWDelicatedSoftware.phar
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v1
-      with:
-        name: artifacts
-        path: build/UNWDelicatedSoftware.phar
+        - echo "Done"
