--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -8,4 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-        - echo "Done"
+    - name: Validate composer.json and composer.lock
+      run: composer validate
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-progress --no-suggest
