--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ import:
 
 script:
  - composer install --prefer-dist
- - composer update
+ - ./vendor/bin/phpstan analyze --no-progress --memory-limit=2G
  - ./vendor/bin/phpunit --bootstrap vendor/autoload.php --fail-on-warning tests/phpunit
  - composer install --no-dev --prefer-dist
  - composer update
