--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
       "make-devtools": "@php -dphar.readonly=0 tests/plugins/DevTools/src/DevTools/ConsoleScript.php --make tests/plugins/DevTools --out plugins/DevTools.phar",
       "make-server": [
          "@composer install --no-dev --classmap-authoritative",
-         "@php -dphar.readonly=0 build/server-phar.php"
+         "@php -dphar.readonly=0 build/server-phar.php --out PocketMine-MP.phar"
       ]
    }
 }
