failed to build test in 20.04, back to 18.04

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ import:
 os:
  - linux
 dist:
- - focal
+ - bionic
 script:
  - composer install --prefer-dist
  - ./vendor/bin/phpunit --bootstrap vendor/autoload.php --fail-on-warning tests/phpunit
