[ci skip] update mail for ci results report

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ cache:
 notifications:
  email:
   recipients:
-   - dtcu0ng@dtcg.xyz
+   - unwds_dev@dtcg.xyz
   on_success: change
   on_failure: always
