tryin to work in 20.04
because our main test servers are running 20.04 so make it a try

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ import:
 os:
  - linux
 dist:
- - xenial
+ - focal
 script:
  - composer install --prefer-dist
  - ./vendor/bin/phpunit --bootstrap vendor/autoload.php --fail-on-warning tests/phpunit
