--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,7 @@
    "scripts": {
       "make-devtools": "@php -dphar.readonly=0 tests/plugins/DevTools/src/DevTools/ConsoleScript.php --make tests/plugins/DevTools --out plugins/DevTools.phar",
       "make-server": [
+         "@composer update",
          "@composer install --no-dev --classmap-authoritative",
          "@php -dphar.readonly=0 build/server-phar.php"
       ]
