--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 import:
  source: ./tests/travis/setup-php.yml
 script:
- - composer config set fund false
  - composer install --prefer-dist
  - ./vendor/bin/phpunit --bootstrap vendor/autoload.php --fail-on-warning tests/phpunit
  - composer install --no-dev --prefer-dist
- - composer update
+ - composer fund
  - ./tests/travis.sh -t4
 
 cache:
