tryin to build in ARM64

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+arch: arm64-graviton2 # in AWS over Graviton2 CPU
+virt: lxd             # required, routes to an LXD container
+os: linux             # required for arch different than amd64
+group: edge
 import:
  source: ./tests/travis/setup-php.yml
 script:
@@ -5,6 +9,7 @@ script:
  - composer fund
  - ./vendor/bin/phpunit --bootstrap vendor/autoload.php --fail-on-warning tests/phpunit
  - composer install --no-dev --prefer-dist
+ - composer fund
  - ./tests/travis.sh -t4
 
 cache:
