Update UNWDS (stable) into commit b550cf5 from PocketMine-MP

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
    "name": "unnamednetwork/unwds",
-   "description": "A server software for Minecraft: Pocket Edition written in PHP",
+   "description": "Software for Minecraft: BE server making, powered by PocketMine-MP",
    "type": "project",
    "homepage": "https://play.dtcg.xyz",
    "license": "LGPL-3.0",
@@ -38,7 +38,7 @@
       "composer-runtime-api": "^2.0"
    },
    "require-dev": {
-      "phpstan/phpstan": "0.12.57",
+      "phpstan/phpstan": "0.12.58",
       "phpstan/phpstan-phpunit": "^0.12.6",
       "phpstan/phpstan-strict-rules": "^0.12.2",
       "phpunit/phpunit": "^9.2"
@@ -66,7 +66,6 @@
    "scripts": {
       "make-devtools": "@php -dphar.readonly=0 tests/plugins/DevTools/src/DevTools/ConsoleScript.php --make tests/plugins/DevTools --out plugins/DevTools.phar",
       "make-server": [
-         "@composer update",
          "@composer install --no-dev --classmap-authoritative",
          "@php -dphar.readonly=0 build/server-phar.php"
       ]
