--- a/src/pocketmine/resources/pocketmine.yml
+++ b/src/pocketmine/resources/pocketmine.yml
@@ -135,12 +135,28 @@ ticks-per:
 
 auto-report:
   #Send crash reports for processing
-  enabled: false
-  send-code: false
-  send-settings: false
+  enabled: true
+  send-code: true
+  send-settings: true
   send-phpinfo: false
   use-https: true
-  host: development.dtcg.xyz
+  host: crash.pmmp.io
+
+anonymous-statistics:
+  #Sends anonymous statistics for data aggregation, plugin usage tracking
+  enabled: false #TODO: re-enable this when we have a new stats host
+  host: stats.pocketmine.net
+
+auto-updater:
+  enabled: true
+  on-update:
+    warn-console: true
+    warn-ops: true
+  #Can be development, alpha, beta or stable.
+  preferred-channel: stable
+  #If using a development version, it will suggest changing the channel
+  suggest-channels: true
+  host: update.pmmp.io
 
 timings:
   #Choose the host to use for viewing your timings results.
