--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "tests/plugins/DevTools"]
 	path = tests/plugins/DevTools
 	url = https://github.com/pmmp/DevTools.git
+[submodule "build/preprocessor"]
+	path = build/preprocessor
+	url = https://github.com/pmmp/PreProcessor.git
