--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,6 +127,31 @@ jobs:
       - name: Install Composer dependencies
         run: php composer.phar install --no-dev --prefer-dist --no-interaction
 
+      - name: Run preprocessor
+        run: |
+          PM_PREPROCESSOR_PATH="$GITHUB_WORKSPACE/build/preprocessor"
+          php "$PM_PREPROCESSOR_PATH/PreProcessor.php" --path=src --multisize || (echo "Preprocessor exited with code $?" && exit 1)
+
+          #dump the diff of preprocessor replacements to a patch in case it has bugs
+          git diff > preprocessor_diff.patch
+
+          VENDOR_PM="$GITHUB_WORKSPACE/vendor"
+          VENDOR_PM_BACKUP="$GITHUB_WORKSPACE/vendor-before-preprocess"
+          cp -r "$VENDOR_PM" "$VENDOR_PM_BACKUP"
+          for f in $(ls $VENDOR_PM/pocketmine); do
+            echo "Processing directory \"$f\"..."
+            php "$PM_PREPROCESSOR_PATH/PreProcessor.php" --path="$VENDOR_PM/pocketmine/$f" --multisize || (echo "Preprocessor exited with code $?" && exit 1)
+            echo "Checking for changes in \"$f\"..."
+            DIFF=$(git diff --no-index "$VENDOR_PM_BACKUP/pocketmine/$f" "$VENDOR_PM/pocketmine/$f" || true)
+            if [ "$DIFF" != "" ]; then
+              PATCH="$GITHUB_WORKSPACE/preprocessor_diff_$f.patch"
+              echo "$DIFF" > "$PATCH"
+              echo "Generated patch file \"$PATCH\""
+            else
+              echo "No diff generated for \"$f\" (preprocessor made no changes)"
+            fi
+          done
+          
       - name: Tests
         env: 
           GHTOKEN: ${{ secrets.GHTOKEN }}
