only build on 7.4.16 when run on self-hosted

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         image: [self-hosted]
-        php: [7.3.27, 7.4.16]
+        php: [7.4.16]
 
     steps:
       - uses: actions/checkout@v2 #needed for build.sh
@@ -37,7 +37,7 @@ jobs:
       fail-fast: false
       matrix:
         image: [self-hosted]
-        php: [7.3.27, 7.4.16]
+        php: [7.4.16]
 
     steps:
       - uses: actions/checkout@v2
@@ -87,7 +87,7 @@ jobs:
       fail-fast: false
       matrix:
         image: [self-hosted]
-        php: [7.3.27, 7.4.16]
+        php: [7.4.16]
 
     steps:
       - uses: actions/checkout@v2
@@ -210,7 +210,7 @@ jobs:
       fail-fast: false
       matrix:
         image: [self-hosted]
-        php: [7.3.27, 7.4.16]
+        php: [7.4.16]
 
     steps:
       - uses: actions/checkout@v2
@@ -262,7 +262,7 @@ jobs:
       fail-fast: false
       matrix:
         image: [self-hosted]
-        php: [7.3.27, 7.4.16]
+        php: [7.4.16]
 
     steps:
       - uses: actions/checkout@v2
